Tidy up some older collections-isms